--- a/client/views/partials/admin/notifications/notificationDashboard.html
+++ b/client/views/partials/admin/notifications/notificationDashboard.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 cus-main" ng-controller="settingsCtrl">
     <ul class="list-inline custom-ul">
-        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.avaTrucks">Available Trucks</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.avaLoads">Available Load</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.availableTrucks">Available Trucks</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="notifications.availableLoads">Available Load</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.app">App</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.lookingForLoad">Looking for Load</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="notifications.listOfEmails">Email Notifications</a></li>
