--- a/client/views/partials/admin/settings/loadTypes.html
+++ b/client/views/partials/admin/settings/loadTypes.html
@@ -43,7 +43,7 @@
     </table>
     <script type="text/ng-template" id="addNewLoadType.html">
         <div class="modal-header" ng-init="initLoadType()">
-            <h3 class="modal-title" id="modal-title">New Load Type</h3>
+            <h3 class="modal-title" id="modal-title">{{loadTitle}}</h3>
             <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
         </div>
         <div class="modal-body" id="modal-body">
