--- a/client/views/partials/admin/settings/truckTypes.html
+++ b/client/views/partials/admin/settings/truckTypes.html
@@ -48,7 +48,7 @@
     </table>
     <script type="text/ng-template" id="addNewTruckType.html">
         <div class="modal-header" ng-init="initTruckType()">
-            <h3 class="modal-title" id="modal-title">New Truck Type</h3>
+            <h3 class="modal-title" id="modal-title">{{truckTitle}}</h3>
             <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
         </div>
         <div class="modal-body" id="modal-body">
