--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -13,7 +13,6 @@
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
     <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
@@ -53,7 +52,7 @@
                     <adminleft-menu label="Services" ui-sref="services.gpsAccounts"></adminleft-menu>
                     <adminleft-menu label="OrderProcess" ui-sref="orderprocess.truckRequest"></adminleft-menu>
                     <adminleft-menu label="Settings" ui-sref="settings.gpsSettings"></adminleft-menu>
-                    <adminleft-menu label="Notifications" ui-sref="notifications.avaTrucks"></adminleft-menu>
+                    <adminleft-menu label="Notifications" ui-sref="notifications.availableTrucks    "></adminleft-menu>
                     <adminleft-menu label="Admin" ui-sref="admin.administrators"></adminleft-menu>
 
                     <div class="clearfix"></div>
@@ -78,7 +77,7 @@
 </footer>
 
 <!--bower scripts-->
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyCYmF9BGm2aYV6c27J5GXdtQYWYLUZehks&libraries=places"></script>
+<!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyCYmF9BGm2aYV6c27J5GXdtQYWYLUZehks&libraries=places"></script>-->
 <script src="components/jquery/dist/jquery.min.js"></script>
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="components/angular/angular.min.js"></script>
@@ -94,7 +93,7 @@
 <script src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
+<!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>-->
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
 
