--- a/client/views/partials/admin/administrators/addUpdateAdminRole.html
+++ b/client/views/partials/admin/administrators/addUpdateAdminRole.html
@@ -1,5 +1,6 @@
 <div class="col-xs-12 newCust" ng-controller="administratorsCtrl" ng-init="adminRolesDropDown();">
     <div class="col-xs-12">
+        <h1 class="name-head">{{roleTitle}}</h1>
         <uib-accordion>
             <div uib-accordion-group class="panel-default" is-open="status.isOpen">
                 <uib-accordion-heading>
@@ -554,13 +555,13 @@
                 </uib-accordion-heading>
                 <table class="table table-bordered table-responsive text-center">
                     <thead>
-                    <td>S No</td>
-                    <td>Section Name</td>
-                    <td>View</td>
-                    <td>List All</td>
-                    <td>Add</td>
-                    <td>Edit</td>
-                    <td>Delete</td>
+                    <th>S No</th>
+                    <th>Section Name</th>
+                    <th>View</th>
+                    <th>List All</th>
+                    <th>Add</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
                     </thead>
                     <tbody>
                     <tr>
