--- a/client/views/partials/admin/administrators/addUpdateFranchise.html
+++ b/client/views/partials/admin/administrators/addUpdateFranchise.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 newCust" ng-controller="administratorsCtrl" ng-init="adminRolesDropDown();franchiseDropDown()">
-    <h4>Add Franchise</h4>
+    <h4>{{franchiseTitle}}</h4>
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-12 col-sm-6">
