--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 newCust" ng-controller="customerCtrl" ng-init="getCustomerLeadDetails()">
-    <h4>Create Customer Leads</h4>
+    <h4>{{pageTitle}}</h4>
     <div class="col-xs-12">
         <uib-accordion>
             <div uib-accordion-group class="panel-default" is-open="status.isOpen">
