--- a/client/views/partials/admin/orderProcess/editTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/editTruckRequest.html
@@ -259,7 +259,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
-                        <div class="form-group">
+                        <div class="form-group customSelect">
                             <ui-select ng-model="loadBooking.customer" ng-change="getTrucksAndDriversByAccountId();"
                                        theme="select2" style="min-width: 390px;"
                                        title="Customer *" append-to-body="true">
