--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 newCust" ng-controller="accountsAddEditCrtl">
-    <h4>GPS / ERP Account</h4>
+    <h4>{{pageTitle}}</h4>
     <div class="col-xs-12">
 
         <uib-accordion>
