--- a/client/views/partials/admin/settings/goodsType.html
+++ b/client/views/partials/admin/settings/goodsType.html
@@ -42,7 +42,7 @@
     </table>
     <script type="text/ng-template" id="addNewGoodsType.html">
         <div class="modal-header" ng-init="initGoodsType()">
-            <h3 class="modal-title" id="modal-title">New Goods Type</h3>
+            <h3 class="modal-title" id="modal-title">{{goodsTitle}}</h3>
             <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
         </div>
         <div class="modal-body" id="modal-body">
