--- a/client/views/partials/admin/settings/gpsSettings.html
+++ b/client/views/partials/admin/settings/gpsSettings.html
@@ -54,7 +54,7 @@
     <script type="text/ng-template" id="addNewGPSandERP.html">
         <div ng-init="initGPSandERPPlan();">
             <div class="modal-header">
-                <h3 class="modal-title" id="modal-title">New Renewal Plans</h3>
+                <h3 class="modal-title" id="modal-title">{{pageTitle}}</h3>
                 <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
             </div>
             <div class="modal-body" id="modal-body">
