--- a/client/views/partials/admin/settings/orderStatus.html
+++ b/client/views/partials/admin/settings/orderStatus.html
@@ -43,7 +43,7 @@
     </table>
     <script type="text/ng-template" id="addNewOrderStatus.html">
         <div class="modal-header" ng-init="initOrderStatus()">
-            <h3 class="modal-title" id="modal-title">New Order Status</h3>
+            <h3 class="modal-title" id="modal-title">{{orderTitle}}</h3>
             <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
         </div>
         <div class="modal-body" id="modal-body">
