--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -24,15 +24,56 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="col-xs-9 map-view">
-            <div  id="map" style="width: 900px; height: 500px;"></div>
+        <div class="clearfix"></div>
+        <div class="row mt-20">
+        <div class="col-xs-9">
+            <div>
+                <div  id="map" style="width: 100%; height: 500px;"></div>
+            </div>
         </div>
         <div class="col-xs-3">
+            <div class="row mt-20">
+            <label>Truck Reg No :</label>
+            <label>{{truckTrackingParams.regNo}} </label>
+            </div>
+            <div class="row">
             <label>Start Date</label>
             <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.startDate"></date-picker>
+            </div>
+            <div class="row">
             <label>End Date</label>
             <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.endDate"></date-picker>
-            <center><input type="button" ng-click="getTruckPositions()" class="btn btn-danger mt-20" value="Track"/></center>
+            </div>
+            <!--<center>-->
+                <input type="button" ng-click="getTruckPositions()" class="btn btn-danger mt-20" value="Track"/>
+                <input type="button" ng-click="animate()" class="btn btn-danger mt-20" value="Play"/>
+                <input type="button" ng-click="stopAnimation()" class="btn btn-danger mt-20" value="Stop"/>
+                <input type="button" ng-click="downloadReport()" class="btn btn-danger mt-20" value="Download">
+            <!--</center>-->
+
+            <div class="mt-10 text-center" ng-show="distance">
+                <label>Distance Travelled :</label> <label>{{distance}} </label>
+            </div>
+
+            <div class="mt-10 text-center" ng-show="distance">
+                <label>Average Speed :</label> <label>{{averageSpeed}} </label>
+            </div>
+
+            <div class="mt-10 text-center" ng-show="distance">
+                <label>Total Time :</label> <label>{{timeTravelled}} </label>
+            </div>
+
+
+            <!--<label>Legends</label>-->
+
+            <div class="mt-20 text-center">
+                <img height="25" width="25" src="/images/green_marker.svg"> <label> - Start Position </label>
+            </div>
+            <div class="mt-10 text-center">
+                <img height="25" width="25" src="/images/red_marker.svg"> <label> - End Position </label>
+            </div>
+
+        </div>
         </div>
     </div>
 </div>
