custome module with api and mysql data

--- a/client/views/partials/admin/customers/transporters.html
+++ b/client/views/partials/admin/customers/transporters.html
@@ -39,10 +39,10 @@
                 {{transporter.noOfLoads || '0'}}
             </td>
             <td data-title="'ERP'" sortable="'erpEnabled'" class="clickable-item">
-                {{transporter.erpEnabled?'Enabled':'Disabled' || '--'}}
+                {{transporter.erpEnabled?'YES':'NO' || '--'}}
             </td>
             <td data-title="'GPS'" sortable="'gpsEnabled'" class="clickable-item">
-                {{transporter.gpsEnabled?'Enabled':'Disabled' || '--'}}
+                {{transporter.gpsEnabled?'YES':'NO' || '--'}}
             </td>
             <td data-title="'Status'" sortable="'isActive'" class="clickable-item">
                 {{transporter.isActive?'Enabled':'Disabled' || '--'}}
