--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -11,8 +11,8 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="fullName"
-                                   ng-model="customerLead.userName"/>
-                            <label class="focus-effect-for-input">User Name*</label>
+                                   ng-model="customerLead.firstName"/>
+                            <label class="focus-effect-for-input">Full Name*</label>
                         </div>
 
                         <div class="form-group pos-relative styling-input-list">
@@ -91,7 +91,7 @@
                             </ul>
                         </div>
                         <div class="form-group">
-                            <!-- <date-picker id="date" ban-future="'banFutureDate'" ng-model="expenseDetails.date" placeholder="'Service Date*'" class="'custom-form-control'"></date-picker> -->
+
                             <div class="form-group">
                                 <select class="form-control custom-form-control"
                                         ng-model="customerLead.yrsInService">
@@ -102,52 +102,55 @@
                         </div>
 
                         <div class="form-group">
-                            <select class="form-control custom-form-control" ng-model="customerLead.serviceTeam">
-                                <option value="" selected>Select</option>
+                            <select class="form-control custom-form-control" ng-model="customerLead.leadSource">
+                                <option value="" selected>Lead Source</option>
                                 <option ng-repeat="team in serviceTeam" value="{{team}}">{{team}}</option>
 
                             </select>
                         </div>
                         <div class="routes">
                             <h4>Operating Routes</h4>
-                            <div class="pos-relative"
-                                 ng-repeat="routes in customerLead.operatingRoutes track by $index">
-                                <span class="plus-pos" ng-show="$index == 0">
-                                    <i class="fa fa-plus-square" aria-hidden="true" ng-click="addRoutes()"></i></span>
+                            <div class="form-group pos-relative styling-input-list"
+                                 ng-repeat="operatingRoute in customerLead.operatingRoutes track by $index">
                                 <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control custom-form-control"
-                                           ng-model="routes.source"
-                                           name="source"/>
+                                    <input type="text" class="form-control custom-form-control" name="source"
+                                           ng-model="operatingRoute.source" id="searchSource{{$index}}"
+                                           ng-change="addSearchSource($index)"/>
                                     <label class="focus-effect-for-input">Source</label>
                                 </div>
                                 <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control custom-form-control"
-                                           ng-model="routes.destination" name="destination"/>
+                                    <input type="text" class="form-control custom-form-control" name="destination"
+                                           ng-model="operatingRoute.destination" id="searchDestination{{$index}}"
+                                           ng-change="addSearchDestination($index)"/>
                                     <label class="focus-effect-for-input">Destination</label>
                                 </div>
-                                <span class="plus-pos" ng-show="$index >= 1"> <i class="fa fa-times-circle clr-red"
-                                                                                 ng-click="routeDel()"></i></span>
+
+                                <span class="plus-pos" ng-show="$index >= 1">
+                                <i class="fa fa-times-circle clr-red" ng-click="deleteOperatingRoute($index)"></i></span>
+                                <span class="plus-pos" ng-show="$index == 0">
+                                <i class="fa fa-plus-square" aria-hidden="true" ng-click="addOperatingRoute()"></i></span>
                             </div>
                         </div>
-
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
                             <p>Uploading Customer Documents</p>
                         </div>
-                        <div class="form-group">
-                            <select class="form-control custom-form-control" ng-model="customerLead.documentType">
-                                <option value="" selected>Select ID Proof</option>
-                                <option ng-repeat="proofs in customerProofs" value="{{proofs}}">{{proofs}}</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <input type="file" ngf-select class="form-control custom-form-control"
-                                   ng-model="customerLead.file"/>
 
-                            <!-- <div class="col-sm-4">
-                                <input type="button" ng-click="uploadProof()" value="Upload" class="btn btn-success" />
-                            </div> -->
+
+                        <div ng-repeat="file in customerLead.files">
+
+                            <div class="form-group pos-relative">
+                                    <span class="plus-pos" ng-show="$index == 0">
+                                    <i class="fa fa-plus-square" aria-hidden="true" ng-click="addDoc()"></i></span>
+                                <input type="file" class="form-control custom-form-control"
+                                       ng-model="file.file" ngf-select ngf-pattern="'image/*'" ngf-accept="'image/*'" >
+
+                                <span class="plus-pos " ng-show="$index >= 1"> <i class="fa fa-times-circle clr-red"
+                                                                                  ng-click="deleteDoc()"></i></span>
+
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -199,57 +202,7 @@
 
             </div>
         </uib-accordion>
-        <uib-accordion>
-            <div uib-accordion-group class="panel-default" is-open="status.isOpenFive">
-                <uib-accordion-heading>
-                    Payment Details <i class="pull-right glyphicon"
-                                       ng-class="{'glyphicon-chevron-down': status.isOpenFive, 'glyphicon-chevron-right': !status.isOpenFive}"></i>
-                </uib-accordion-heading>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group">
-                            <select class="form-control custom-form-control" ng-model="customerLead.paymentType">
-                                <option value="" selected>Payment Type</option>
-                                <option ng-repeat="payType in paymentType" value="{{payType}}">{{payType}}</option>
-                            </select>
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="number" class="form-control custom-form-control" name="payPrecent"
-                                   ng-model="customerLead.loadPaymentToPayPercent"/>
-                            <label class="focus-effect-for-input">Load Payment To pay Percent</label>
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="number" class="form-control custom-form-control" name="tds"
-                                   ng-model="customerLead.tdsDeclarationDoc"/>
-                            <label class="focus-effect-for-input">TDS Declaration Doc</label>
 
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group styling-input-list">
-                            <input type="number" class="form-control custom-form-control" name="advancePercent"
-                                   ng-model="customerLead.loadPaymentAdvancePercent"/>
-                            <label class="focus-effect-for-input">Load Payment Advance Percent</label>
-
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="number" class="form-control custom-form-control" name="podDays"
-                                   ng-model="customerLead.loadPaymentPodDays"/>
-                            <label class="focus-effect-for-input">Load Payment POD days</label>
-
-                        </div>
-
-                        <div class="form-group styling-input-list">
-                            <input type="number" class="form-control custom-form-control" name="leadSource"
-                                   ng-model="customerLead.leadSource"/>
-                            <label class="focus-effect-for-input">lead Source</label>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </uib-accordion>
         <div class="col-xs-12 save-btns">
             <a href="#" class="btn btn-danger" ng-click="cancel()">Cancel</a>
             <a href="#" class="btn btn-primary" ng-click="createLeads()">Submit</a>
