--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -26,7 +26,7 @@
             <tbody>
             <tr ng-repeat="customer in customerLeads">
                 <td>{{$index+1}}</td>
-                <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.userName}}</td>
+                <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">{{customer.firstName}}</td>
                 <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
                 <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone}}
                 </td>
@@ -38,12 +38,10 @@
                 <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gpsEnabled}}</td>
                 <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.loadEnabled}}</td>
                 <td class="col-xs-2" data-title="'Lead Status'">
-                    <select class="form-control">
-                        <option ng-repeat="item in leadStatus">{{item}}</option>
-                    </select>
+                    {{customer.leadStatus}}
                 </td>
                 <td data-title="'Action'">
-                    <a href="#" ui-sref="customers.createCustomer({customerId:customer._id})" class="edit_icon">
+                    <a href="#" ui-sref="customers.customerLeadsEdit({customerId:customer._id})" class="edit_icon">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </a>
                     <a href="#" ng-click="delCustomer(customer._id)" class="delete_icon">
